--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -65,29 +65,34 @@
                     text-overflow: ellipsis; 
                 }
 
+                .dateAndDuration {
+                    display: flex;
+                    justify-content: space-between;
 
-                span {
-                    display: inline-block;
-                    margin-top: 0.5rem;
-                    font-size: 0.875rem;
-
-                    &:last-child {
-                        margin-left: 0.5rem;
-                        padding-left: 0.5rem;
-                        position: relative;
-
-                        &::before {
-                            content: "";
-                            width: 4px;
-                            height: 4px;
-                            border-radius: 2px;
-                            background: #ddd;
-                            position: absolute;
-                            left: 0;
-                            top: 50%;
+                    span {
+                        display: inline-block;
+                        margin: 0.5rem 1rem;
+                        font-size: 0.875rem;
+    
+    
+                        &:last-child {
+                            margin-left: 0.5rem;
+                            padding-left: 0.5rem;
+                            position: relative;
+    
+                            &::before {
+                                content: " ";
+                                width: 4px;
+                                height: 4px;
+                                border-radius: 2px;
+                                background: #ddd;
+                                position: absolute;
+                                left: 0;
+                                top: 50%;
+                            }
                         }
-                    }
-                }                   
+                    }  
+                }                 
             }
 
             button {
